# AI-build

./: .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CI_CD_SETUP_GUIDE.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_SHELL_DEPLOYMENT.md  DEPLOYMENT_AUTOMATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPTS_INDEX.md  Dockerfile  FINAL_VERIFICATION_CHECKLIST.md  PHASE_DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_CLOUD_SETUP.md  README.md  STEP_BY_STEP_DEPLOYMENT.md  TROUBLESHOOTING_IAM_ROLES.md  VERTEX_AI_SERVICES_GUIDE.md  cloudbuild.yaml  config.yaml  deploy-01-enable-apis.ps1  deploy-01-enable-apis.sh  deploy-02-setup-database.ps1  deploy-02-setup-database.sh  deploy-03-deploy-agents.ps1  deploy-03-deploy-agents.sh  deploy-04-deploy-app.ps1  deploy-04-deploy-app.sh  deploy-master.ps1  deploy-master.sh  deploy-to-cloud.ps1  deploy.sh  docker-compose.yaml  init.sh  requirements.txt  run_local.sh
agents/chief_justice/: Dockerfile  __init__.py  adk_app.py  agent.py  pyproject.toml
agents/ethicist_juror/: __init__.py  adk_app.py  agent.py  pyproject.toml
agents/legal_researcher/: Dockerfile  __init__.py  adk_app.py  agent.py  pyproject.toml
agents/mitigator_juror/: __init__.py  adk_app.py  agent.py  pyproject.toml
agents/quantitative_auditor/: __init__.py  adk_app.py  agent.py  pyproject.toml
agents/strict_auditor_juror/: __init__.py  adk_app.py  agent.py  pyproject.toml
app/: Dockerfile  api_models.py  main.py  pyproject.toml
app/frontend/: app.js  index.html  style.css
shared/: __init__.py  a2a_utils.py  authenticated_httpx.py  bias_calculator.py  report_generator.py  vector_search_client.py
