[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "justice-ai-workflow"
version = "1.0.0"
description = "Justice AI Workflow - Fairness-First Algorithmic Auditing System"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
]
